temp: initial Java implementation with basic structure
- Add basic Solution.java with naive brute force subarray sum algorithm
- Fix syntax error (missing semicolon) in implementation
- Update date to October 2025
- Add comprehensive Java .gitignore patterns (.class, .jar, IDE files)
- Basic structure ready for further algorithm implementations

WIP: Additional algorithms and testing to be implemented

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ wheels/
 .installed.cfg
 *.egg
 PYTHONPATH
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+target/
+.gradle/
+build/
+.idea/
+*.iml
+.settings/
+.project
+.classpath
